--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "module": "es6",
-    "declaration": false,
+    "declaration": true,
     "outDir": "./dist",
     "experimentalDecorators" : true,
     "lib": ["es2015", "dom"],
